--- a/app.css
+++ b/app.css
@@ -3,22 +3,22 @@ body {
 }
 .container {
     display: grid;    
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 80px 350px 400px 80px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 80px 350px auto 80px;
 }
 
 header {
-    grid-column: span 12;
+    grid-column: span 4;
 }
 aside {
-    grid-column: span 12;
+    grid-column: span 4;
 }
 main {
-    grid-column: span 12;
+    grid-column: span 4;
     background-color: lightblue;
 }
 footer {
-    grid-column: span 12;
+    grid-column: span 4;
     background-color: lightcoral;
 }
 
@@ -105,4 +105,53 @@ aside{
     border-radius: 4px;
     box-sizing: border-box;
     cursor: pointer;
+}
+main {
+    text-align: center;
+    padding-bottom: 25px;
+}
+.heading{
+    padding: 20px;
+}
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+    max-width: 1600px;
+}
+
+.card {
+    display: inline-block;
+    background-color: white;
+    text-align: center;
+    overflow: hidden;
+    width: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+.card:hover {
+    box-shadow: 0 20px 30px 0 rgba(0,0,0,0.2);
+}
+.card img{
+    width: 100%;
+}
+
+footer{
+    text-align: center;
+    padding-top: 20px;
+}
+.info-card a {
+    text-decoration: none;
+    background-color: royalblue;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
