--- a/app.css
+++ b/app.css
@@ -125,7 +125,7 @@ main {
     display: inline-block;
     background-color: white;
     text-align: center;
-    overflow: hidden;
+    overflow: visible;
     width: 250px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -134,9 +134,10 @@ main {
     margin-right: 30px;
     margin-bottom: 50px;
     border-radius: 10px;
+
 }
 .card:hover {
-    box-shadow: 0 20px 30px 0 rgba(0,0,0,0.2);
+    box-shadow: 10px 10px 40px 10px rgba(0,0,0,0.2);
 }
 .card img{
     width: 100%;
@@ -154,4 +155,44 @@ footer{
     padding: 5px;
     padding-left: 8px;
     padding-right: 8px;
+    float: left;
+    margin-right: 15px;
+    margin-left: 20px;
+}
+
+.info-card h4 {
+    color: cornflowerblue;
+}
+.info-card span{
+    margin-left: 25px;
+    color: black;
+}
+
+.submenu-card{
+    position: relative;
+}
+
+.submenu-card #shopping-card {
+    display: none;
+}
+
+.submenu-card:hover  #shopping-card{
+    display: block;
+    position: absolute;
+    right:0;
+    bottom: 0;
+    right: -45px;
+    z-index: 1;
+    background-color: white;
+    padding: 20px;
+    height: 500px;
+    width: 300px;
+    background-color: lightcyan;
+}
+#shopping-card th{
+    display: inline-block;
+    
+}
+#shopping-card tr{
+    text-align: left;
 }
