--- a/app.css
+++ b/app.css
@@ -134,7 +134,8 @@ main {
     margin-right: 30px;
     margin-bottom: 50px;
     border-radius: 10px;
-
+    height: 400px;
+    position: relative;
 }
 .card:hover {
     box-shadow: 10px 10px 40px 10px rgba(0,0,0,0.2);
@@ -168,31 +169,26 @@ footer{
     color: black;
 }
 
-.submenu-card{
-    position: relative;
-}
 
-.submenu-card #shopping-card {
-    display: none;
-}
 
-.submenu-card:hover  #shopping-card{
+.extra-info {
     display: block;
     position: absolute;
     right:0;
-    bottom: 0;
+    bottom: -50px;
     right: -45px;
     z-index: 1;
     background-color: white;
     padding: 20px;
-    height: 500px;
+    height: 450px;
     width: 300px;
     background-color: lightcyan;
 }
-#shopping-card th{
+.extra-info th{
     display: inline-block;
+    color: black;
     
 }
-#shopping-card tr{
+.extra-info tr{
     text-align: left;
 }
