--- a/app.css
+++ b/app.css
@@ -132,10 +132,16 @@ main {
     padding: 10px;
     margin-left: 30px;
     margin-right: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     border-radius: 10px;
     height: 400px;
     position: relative;
+}
+@media screen and (min-width: 600px){
+    .card{
+        margin-right: 60px;
+        margin-left: 60px;
+    }
 }
 .card:hover {
     box-shadow: 10px 10px 40px 10px rgba(0,0,0,0.2);
@@ -175,20 +181,26 @@ footer{
     display: block;
     position: absolute;
     right:0;
-    bottom: -50px;
+    bottom: -43px;
     right: -45px;
     z-index: 1;
     background-color: white;
     padding: 20px;
     height: 450px;
-    width: 300px;
+    width: 320px;
     background-color: lightcyan;
 }
 .extra-info th{
     display: inline-block;
     color: black;
-    
+    font-size: 15px;  
 }
 .extra-info tr{
     text-align: left;
+}
+.more-info{
+    text-align: left;
+}
+#close-button{
+    float:right;
 }
