--- a/app.css
+++ b/app.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
 }
 .container {
-    display: grid;    
+    display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 80px 350px auto 80px;
 }
@@ -134,7 +134,6 @@ main {
     margin-right: 30px;
     margin-bottom: 80px;
     border-radius: 10px;
-    height: 420px;
     position: relative;
 }
 @media screen and (min-width: 600px){
@@ -150,10 +149,6 @@ main {
     width: 100%;
 }
 
-footer{
-    text-align: center;
-    padding-top: 20px;
-}
 .info-card a {
     text-decoration: none;
     background-color: royalblue;
@@ -163,8 +158,7 @@ footer{
     padding-left: 8px;
     padding-right: 8px;
     float: left;
-    margin-right: 15px;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 .info-card h4 {
@@ -182,18 +176,17 @@ footer{
     position: absolute;
     right:0;
     bottom: -43px;
-    right: -45px;
+    right: -20px;
     z-index: 1;
     background-color: white;
     padding: 20px;
-    height: 450px;
-    width: 320px;
     background-color: lightcyan;
+    border-radius: 10px;
 }
 .extra-info th{
     display: inline-block;
     color: black;
-    font-size: 15px;  
+    font-size: 15px;
 }
 .extra-info tr{
     text-align: left;
@@ -203,4 +196,12 @@ footer{
 }
 #close-button{
     float:right;
+}
+
+
+
+
+footer{
+    text-align: center;
+    padding-top: 20px;
 }
