--- a/app.css
+++ b/app.css
@@ -147,6 +147,7 @@ main {
 }
 .card img{
     width: 100%;
+    height: 290px;
 }
 
 .info-card a {
@@ -163,10 +164,10 @@ main {
 
 .info-card h4 {
     color: cornflowerblue;
-    font-size: 15px;
+    font-size: 13px;
 }
 .price{
-  font-size: 15px;
+  font-size: 13px;
 }
 @media screen and (min-width: 800px){
    .info-card h4 {
@@ -175,6 +176,9 @@ main {
   .price{
     font-size: 22px;
   }
+}
+.info-card p {
+  font-size: 15px;
 }
 
 .info-card span{
@@ -223,6 +227,7 @@ footer{
     cursor: not-allowed;
     text-align: center;
     display: block;
+    color: white;
 }
 .footer-primary{
   margin-right: 30px;
@@ -236,4 +241,5 @@ footer{
   cursor: not-allowed;
   text-align: center;
   display: block;
+  color: white;
 }
