--- a/app.css
+++ b/app.css
@@ -157,7 +157,9 @@ main {
     margin: auto;
     max-width: 1600px;
 }
-
+#heading{
+  margin-bottom: 50px;
+}
 .card {
     display: inline-block;
     background-color: white;
@@ -169,7 +171,7 @@ main {
     padding: 10px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
     border-radius: 10px;
     position: relative;
 }
@@ -192,7 +194,9 @@ main {
     height: 300px;
   }
 }
-
+.info-card{
+  height: 10px;
+}
 .info-card a {
     text-decoration: none;
     background-color: royalblue;
@@ -209,6 +213,7 @@ main {
     color: cornflowerblue;
     font-size: 12px;
     display: inline-block;
+    height: 5px;
 }
 .price{
   font-size: 12px;
@@ -250,14 +255,14 @@ main {
 .extra-info {
     display: block;
     position: absolute;
-    right:0;
-    bottom: -10px;
-    right: 0px;
+    right: -17px;
+    bottom: -2px;
     z-index: 1;
     background-color: white;
-    padding: 20px;
+    padding: 10px;
     background-color: lightcyan;
     border-radius: 10px;
+    width: 335px;
 }
 .extra-info th{
     display: inline-block;
