--- a/app.css
+++ b/app.css
@@ -66,6 +66,26 @@ ul {
   display: table-cell;
 vertical-align: inherit;
 }
+@media screen and (min-width: 1100px){
+  #shopping-cart th{
+    font-size: 20px;
+  }
+  #shopping-cart a{
+    font-size: 18px;
+  }
+  #shopping-cart{
+    width: 360px;
+  }
+  .image-content h2 {
+    font-size: 32px;
+  }
+  .image-content p{
+    font-size: 22px;
+  }
+  .image-content input{
+    font-size: 16px;
+  }
+}
 table{
   margin-bottom: 2.5rem;
 }
@@ -177,8 +197,9 @@ main {
 }
 @media screen and (min-width: 600px){
     .card{
-        margin-right: 60px;
-        margin-left: 60px;
+        margin-right: 50px;
+        margin-left: 50px;
+        width: 350px;
     }
 }
 .card:hover {
@@ -206,7 +227,11 @@ main {
     padding-left: 8px;
     padding-right: 8px;
     float: left;
-    margin-left: 38px;
+    margin-left: 12%;
+}
+.visible-card a{
+  float:right;
+  margin-right: 12%;;
 }
 
 .info-card h4 {
@@ -232,6 +257,10 @@ main {
   .info-card p {
     font-size: 20px;
   }
+  .info-card a{
+    font-size: 20px;
+  }
+
 }
 
 .info-card span{
@@ -242,6 +271,7 @@ main {
   display: inline-block;
   padding-left: 5px;
   padding-right: 5px;
+
 }
 .visible-card a{
   display: inline-block;
@@ -262,6 +292,12 @@ main {
     background-color: lightcyan;
     border-radius: 10px;
     width: 335px;
+}
+@media screen and (min-width: 600px){
+  .extra-info{
+    width: 365px;
+    right: -10px;
+  }
 }
 .extra-info th{
     display: inline-block;
